public interface IServeurWeb{
    public int repondre(RequetteHttp requette);
}